# src/tsoa/swagger.json
@@ -431,12 +431,12 @@
 					"createdAt": {
 						"type": "string",
 						"format": "date-time",
-						"default": "2025-02-02T01:06:45.422Z"
+						"default": "2025-02-02T02:12:51.080Z"
 					},
 					"updatedAt": {
 						"type": "string",
 						"format": "date-time",
-						"default": "2025-02-02T01:06:45.422Z"
+						"default": "2025-02-02T02:12:51.080Z"
 					},
 					"name": {
 						"type": "string"
@@ -592,12 +592,12 @@
 					"createdAt": {
 						"type": "string",
 						"format": "date-time",
-						"default": "2025-02-02T01:06:45.431Z"
+						"default": "2025-02-02T02:12:51.089Z"
 					},
 					"updatedAt": {
 						"type": "string",
 						"format": "date-time",
-						"default": "2025-02-02T01:06:45.431Z"
+						"default": "2025-02-02T02:12:51.089Z"
 					},
 					"name": {
 						"type": "string"
@@ -903,12 +903,12 @@
 					"createdAt": {
 						"type": "string",
 						"format": "date-time",
-						"default": "2025-02-02T01:06:45.440Z"
+						"default": "2025-02-02T02:12:51.099Z"
 					},
 					"updatedAt": {
 						"type": "string",
 						"format": "date-time",
-						"default": "2025-02-02T01:06:45.440Z"
+						"default": "2025-02-02T02:12:51.099Z"
 					},
 					"name": {
 						"type": "string"
@@ -3451,6 +3451,14 @@
 					{
 						"in": "query",
 						"name": "includeSubnet",
+						"required": false,
+						"schema": {
+							"type": "boolean"
+						}
+					},
+					{
+						"in": "query",
+						"name": "includeVouchers",
 						"required": false,
 						"schema": {
 							"type": "boolean"
